Remove portfolio button.

--- a/index.html
+++ b/index.html
@@ -23,11 +23,9 @@
     <div class="container nav-container">
       <h1 class="logo-heading">Fun Bus</h1>
       <a href="https://github.com/J2Macwilliams/Fun-Bus">
-        <Button class="pathButton">Code</Button>
+        <button class="path">Code</button>
       </a>
-      <a href="https://j2macwilliams.github.io/My-Portfolio/">
-        <Button class="pathButton">Portfolio</Button>
-      </a>
+
       <nav class="nav">
         <a class="nav-link" href="#">Home</a>
         <a class="nav-link" href="#">About Us</a>
